# podcast_plus_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  TTS.ipynb  build_index.py  chunking.py  config.py  docker-compose.yml  embedding.py  faiss_index.index  pyproject.toml  requirements.txt  retrieval.py  text_extraction.py  upload.py  wavreturm.py
app/: main.py
chunks/Computer/: chap_02.json  chap_03.json  chap_05.json  chap_08.json  chap_09.json
chunks/Physics/: Lec01.json  Lec03.json  Lec04.json  Lec11.json  Lec12.json  Lec13.json  Lec14.json  Lec15.json  Lec17.json  Lec18.json
chunks/Probability/: topic1.json  topic10.json  topic11.json  topic12.json  topic2.json  topic3.json  topic6.json  topic8.json  topic9.json
db/: faiss_index.index
db/embeddings/: embeddings.npy  metadata.json  processing_log.json
embeddings/: embeddings.npy  metadata.json
evaluate/: evaluation_results_lora.csv  rag_evaluation_results.csv  rag_evaluation_results_rag.csv
gernerate/: generate_result_rag.ipynb  queries.csv  retrieved_results.csv
local_model/evaluate/: evaluation.ipynb  evaluation_results_base.csv
local_model/gernerate/: generate_query.py  generate_result.ipynb  queries_rag.csv  topics.csv
rag/: build_index.py  chunking.py  embedding.py  processing_tracker.py  retrieval.py  text_extraction.py
text/Computer/: chap_03.txt  chap_04.txt  chap_07.txt
text/Physics/: Lec02.txt  Lec05.txt  Lec08.txt  Lec12.txt  Lec13.txt  (+6 more)
training_data/: dialog_instruction_dataset.jsonl
tts/: TTS.ipynb  generate_audio_worker.py  kokoro_cpu_test.py
worker/: retrieve_worker.py
(+67 files in other folders)
