[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "cn2an>=0.5.23",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.135.1",
    "kokoro>=0.9.4",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.24.0",
    "ordered-set>=4.1.0",
    "pdfplumber>=0.11.8",
    "peft>=0.18.0",
    "pyannote-audio>=4.0.2",
    "pymupdf>=1.26.6",
    "pypinyin-dict>=0.9.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.1.2",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "trl>=0.25.1",
    "uvicorn>=0.41.0",
]
